assets/css/style.scss
/* ... */
h1,h2,h3,h4 {
	font-family: var(--franklin-gothic-urw-comp);
	text-transform: uppercase;
}

#banner {
	font-family: var(--franklin-gothic-urw-comp);
	text-transform: uppercase;
}

.stats-box {
	position: relative;
	border: 4px solid var(--uvalib-secondary-light-gray);
	font-family:  monospace;
	font-size: 20px;
	padding: .5em 1em;
	span {
		color: rgba(0,0,0,.5);
	}
}

/* Used on: /digital-humanities, individual pages for events, people, and projects */
ul .stats-box {
	text-align: right;
}

/********************************************************************/
/* Site Banner */
#scholarslab-header {
	position: relative;
	padding: 1rem;
	#global-navigation > .menu-toggle {
		position: absolute;
		top: 1rem;
		right: 1rem;
	}
}

#slab-logo {
	display:block;
	text-decoration:none;
	width: 300px;

	img {
		margin:0;
	}

}

#global-navigation {
	ul {
		display: none;
		flex-direction: column;
		list-style: none;
		padding: 0;
		width: 100%;
		min-width: max-content;
		font-size: 1rem;
	}

	li {
		padding: 0;
		min-width: min-content;
		display: flex;
		flex-wrap: wrap;
		justify-content: flex-start;
	}

	button {
		cursor: pointer;
		display: flex;
		align-items: center;
		justify-content: center;
		background: none;
		color: black;
		outline:none;
		border:none;
		font-size: 1.5rem;
	}

	a {
		display:flex;
		align-items: center;
		text-decoration:none;
		&:link,
		&:visited {
		}

		&:hover,
		&:focus,
		&:active {
		}
	}

	a,
	button {
		flex: 1 1;
		justify-content: space-between;
		gap: var(1rem, 1.5rem);
	}

	.dropdown-toggle {
		flex-shrink: 1;
		flex-grow: 0;
		&::after {
			display: flex;
			content: "▾";
			align-items: center;
			justify-content: center;
			transition: transform 300ms ease;
		}

		&[aria-expanded="true"]::after {
			transform: rotate(-180deg);
		}
	}
	.hide {
		display: none !important;
	}

	.show {
		display: flex !important;
		opacity: 1;
	}

	.transitioning {
		display: flex !important;
		opacity: 0;
	}
}

@media screen and (min-width: 900px) {
	.menu-toggle {
		display: none !important;
	}

	#scholarslab-header {
		display:flex;
		flex-direction: row;
		flex-wrap:nowrap;
		justify-content: space-between;
		padding: 1rem;
	}

	#global-navigation {
		.dropdown-toggle {
			display:none;
		}

		 ul,
		> ul.hide {
		display: flex !important;
		flex-direction: row;
		justify-content: space-between;
		margin: 0;
			li {
				padding: 0 0 0 1rem;
				ul {
				position: absolute;
				top: 3rem;
				right:0;
				width:fit-content;
				justify-content: flex-end;
				}
			}
		}
		ul.show {
			background: white;
			padding: 1rem !important;
			position:absolute;
			li {
				display:inline !important;
			}

		}
	}
}

/********************************************************************/
/* Main content for all pages. */
#main {

	& > header:first-of-type,
	body.post & article header:first-of-type
	{
		padding: 4rem 0 0;
		display:flex;
		flex-direction: column;
		justify-content: flex-end;
		min-height: 30vh;
		background-color: rgba(0,0,0,0.0325);
		background-image: url('/assets/img/decorative/tiles/hypnotize.png');
		background-size:200px;

		@media screen and (min-width: 900px) {
			min-height: 50vh;
		}

		hgroup {
			max-width: 900px;
			margin: 0 auto;
			width: 100%;
			border-bottom: 2rem solid white;
			padding: 0 2rem;
		}

		h1 {
			font-size: 3rem;
			@media screen and (min-width: 900px) {
			font-size: 5rem;
			}
			margin-top:0;
			line-height: 1.2;
		}
	}

	.content {
		max-width: 900px;
		margin: 0 auto;
		padding: 0 2rem 2rem;
	}
}

/********************************************************************/
/* Homepage Styles */
#introduction {
	padding: 0 2rem;
	display:flex;
	flex-direction:column;
	flex-wrap: nowrap;
	justify-content: center;
	min-height: 400px;
	background-color: rgba(0,0,0,0.0325);
	background-image:
		url('/assets/img/logos/slab-logos/Transparent-SLabVinesHandsLogo.png'),
		url('/assets/img/decorative/tiles/hypnotize.png');
	background-size: contain, 200px;
	background-position: bottom right;
	background-repeat: no-repeat, repeat;
	padding-right: 50%;
	h1 {
		font-size: 4rem;
		text-transform: none;
		line-height:1;
		margin:0 0 1rem;
	}

	p {
		margin:0;
	}
}

#newsletter {
	padding: 1rem;
	text-align: center;
	font-size: 1.5rem;
	background-color: rgba(0,0,0,0.125);
}
/* ... */

